<resources>
    <string name="app_name">JustCleanTest</string>

    <!--TAB NAMES-->
    <string name="popular_movies">Popular</string>
    <string name="top_rated_movies">Top</string>
    <string name="upcoming_movies">Upcoming</string>
    <string name="search_movies">Search</string>

    <!--HINTS-->
    <string name="movie_name">Movie name goes here</string>
    <string name="movie_rating">Rating goes here</string>
    <string name="movie_release_Date">Date goes here</string>
    <string name="movie_plot">Plot goes here</string>
    <string name="movie_language">Language goes here</string>
    <string name="type_movie">Enter Movie Name (Ex: Jurassic Park)</string>
    <string name="overview">Plot Explanation</string>

    <!--BUTTON TEXT-->
    <string name="search_button">Search</string>
    <string name="search_another_movie_button">Search Other Movies</string>
    <string name="movie_db_text">The Movie DB</string>



</resources>
