<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/moviesListFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movies_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="visible">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/searchOtherMoviesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:fontFamily="@font/dubai_bold"
            android:text="@string/search_another_movie_button" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/enterMovieFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center_vertical|center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/enteredMovieEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/searchButton"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:fontFamily="@font/dubai_light"
                android:gravity="center_horizontal"
                android:hint="@string/type_movie"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textStyle="italic" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/dubai_bold"
                android:text="@string/search_button" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarSearch"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal" />

    </FrameLayout>


</RelativeLayout>